--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -6,23 +6,55 @@
     <title>Projections</title>
 </head>
 <body>
-    <h1>In this project I learned how to display images in different projections</h1>
+    <h1>HW 2: In this project I learned how to display images in different projections</h1>
     
-    <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
-    <p>You can write a paragraph here</p>
+    <p>I used a shape file from Natural Earth (linked below) as the base map, and then used a different EPSG code for each base map with the Indacatrix Mapper Plug-In.  </p>
     
     <h2>WGS84 Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This map becomes distorted the farther you go away from the Equator.</h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This map is most accurate around the water near Nigeria.</h3>
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
-    <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
-    <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
+    <h2>Pseudo Mercator</h2>
+    <h3>The sizes / area of the continents, especially the poles, is heavily distorted.</h3>
+    <a href=".//maps/3857.png">
+    <img src=".//maps/3857.png" alt="3857" width='500px'>
+    </a>
+    <h2>Sphere Winkel</h2>
+    <h3>The poles both seem to be heavily distorted.</h3>
+    <a href=".//maps/53018.png">
+    <img src=".//maps/53018.png" alt="53018" width='500px'>
+    </a>
+    <h2>World Cylindrical Equal Area</h2>
+    <h3>The poles seem very "squashed" and distorted although distance / area seems to be more accurate.</h3>
+    <a href=".//maps/54034.png">
+    <img src=".//maps/54034.png" alt="54034" width='500px'>
+    </a>
+    <h2>World Equidistant Conic</h2>
+    <h3>This map heavily expands the area the farther and farther you get from the North Pole.</h3>
+    <a href=".//maps/54027.png">
+    <img src=".//maps/54027.png" alt="54027" width='500px'>
+    </a>
+    <h2>North Pole Azimuthal Equidistant</h2>
+    <h3>This map is similar to the previous one, with size being distorted more and more the farther one is from the North Pole.</h3>
+    <a href=".//maps/102016.png">
+    <img src=".//maps/102016.png" alt="102016" width='500px'>
+    </a>
+    <h2>World Mollweide</h2>
+    <h3>All parts of this map seem to have the area distorted.</h3>
+    <a href=".//maps/54009.png">
+    <img src=".//maps/54009.png" alt="54009" width='500px'>
+    </a>
+    <h2>Asia North Albers Equal Area Conic</h2>
+    <h3>This map seeks to keep Europe the most accurate, while distorting and even eliminating some parts of the globe.</h3>
+    <a href=".//maps/102025.png">
+    <img src=".//maps/102025.png" alt="102025" width='500px'>
+    </a>
     <p></p>
     <h2>Data used for this project</h2>
     <a href="https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/cultural/ne_10m_admin_0_countries.zip"> Download Natrual Earth 1:10m Cultural Vector </a>
