--- a/hw3/Tiles.html
+++ b/hw3/Tiles.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([35.90503085665604, -79.04994340857041], 14.0);
-      L.tileLayer('./tiles/{z}/{x}/{y}.png', {
+      L.tileLayer('./Tiles/{z}/{x}/{y}.png', {
         minZoom: 12,
         maxZoom: 16,
         tms: false,
